--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-9.26MB/s(Youtube:不良林), server: ocikr.n.optage.moe, port: 44600, type: trojan, password: 7e1c3fe1-720d-43e3-86c6-bdbdbfcf0401, sni: ocikr.n.optage.moe, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1007.9KB/s(Youtube:不良林), server: mixv4-1.194610.xyz, port: 4439, type: vmess, uuid: e9bb0c5c-01c7-7907-c454-3b8b6d472b19, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a185d5dc-c726-466c-98f2-ba494e63695f, ws-headers: {Host: mixv4-1.194610.xyz}}
-  - {name: 🇯🇵 日本-5.17MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.53MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.79MB/s(Youtube:不良林), server: 93.179.112.142, port: 54317, type: vmess, uuid: faeb79e5-6549-4b08-8e87-3d7c5457930d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-707.3KB/s(Youtube:不良林), server: 146.56.45.173, port: 21365, type: vmess, uuid: 49526417-e201-4949-8055-81b0fb264be5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.95MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇯🇵 日本-5.68MB/s(Youtube:不良林), server: 43.128.253.82, port: 31372, type: vmess, uuid: 2a9056a7-bf92-40c8-f155-1e14aac9beba, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-10.05MB/s(Youtube:不良林), server: mixv4-27.194610.xyz, port: 443, type: vmess, uuid: e9bb0c5c-01c7-7907-c454-3b8b6d472b19, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a185d5dc-c726-466c-98f2-ba494e63695f, ws-headers: {Host: mixv4-27.194610.xyz}}
+  - {name: 🇺🇸 美国-301.1KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.84MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-10.04MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.17MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-12.41MB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-436.1KB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇺🇸 美国-5.12MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-756.9KB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-9.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-707.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇮🇳 印度-756.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-9.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-707.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇮🇳 印度-756.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-9.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-707.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇮🇳 印度-756.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-9.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-707.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇮🇳 印度-756.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-9.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-707.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇮🇳 印度-756.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-9.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-707.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇮🇳 印度-756.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-9.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-707.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇮🇳 印度-756.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
